--- a/index.html
+++ b/index.html
@@ -29,10 +29,12 @@
                     <li class="item"><a class="contacts-link" href="mailo:info@devstudio.com">info@devstudio.com</a></li>
                     <li class="item"><a class="contacts-link" href="tel:+11(000)1111111">+11 (000) 111-11-11</a></li>
                 </ul>
-        </div>
+                <button class="menu-toggle js-open-menu" aria-expanded="false" aria-controls="mobile-menu">
+                    <svg class="icon-menu"><use class="icon-menu-use" href="./images/icons.svg#icon-menu"></use></svg>
+                </button>
     </header>
     <main>
-        <section class="hero overlay">
+        <section class="hero">
             <div class="container">
                 <h1 class="hero-title">Effective Solutions <br> for Your Business</h1>
                 <button class="hero-button" type="button" data-modal-open>Order Service</button>
@@ -81,9 +83,36 @@
             <div class="container">
                 <h2 class="work-title">What are we doing</h2>
                 <ul class="work-photo list">
-                    <li class="item"><img width="360" src="./images/computer.jpg" alt="computer"></li>
-                    <li class="item"><img width="360" src="./images/smartphone.jpg" alt="smartphone"></li>
-                    <li class="item"><img width="360" src="./images/smartphoneinhand.jpg" alt="smartphone in hand"></li>
+                    <li>
+                        <img
+                        srcset="./images/what_we_are_doing/desktop-app.jpg 1x, 
+                        ./images/what_we_are_doing/desktop-app@2x.jpg 2x,"
+                          src="./images/what_we_are_doing/desktop-app.jpg"
+                          alt="monitor"
+                          width="360"
+                          height="300"
+                        />
+                      </li>
+                      <li>
+                        <img
+                        srcset="./images/what_we_are_doing/mobile-app.jpg 1x, 
+                        ./images/what_we_are_doing/mobile-app@2x.jpg 2x,"
+                          src="./images/what_we_are_doing/mobile-app.jpg"
+                          alt="phone with app"
+                          width="360"
+                          height="300"
+                        />
+                      </li>
+                      <li>
+                        <img
+                        srcset="./images/what_we_are_doing/ux-ui-design.jpg 1x, 
+                        ./images/what_we_are_doing/ux-ui-design@2x.jpg 2x,"
+                          src="./images/what_we_are_doing/ux-ui-design.jpg"
+                          alt="phone in hand"
+                          width="360"
+                          height="300"
+                        />
+                      </li>
                 </ul>
             </div>
         </section>
@@ -91,8 +120,16 @@
             <div class="container">
                 <h2 class="team-main-title">Our Team</h2>
                 <ul class="team-main list">
+                    <div class="team-main-width">
                     <li class="item">
-                        <img width="264" src="./images/markguerrero.jpg" alt="Mark Guerrero">
+                        <img
+                        srcset="./images/our_team/mark-guerrero.jpg 1x, 
+                        ./images/our_team/mark-guerrero@2x.jpg 2x,"
+                          src="./images/our_team/mark-guerrero.jpg"
+                          alt="Mark Guerrero"
+                          width="264"
+                          height="260"
+                        />
                     <div class="padding">
                         <h3 class="team-title">Mark Guerrero</h3>
                         <p class="team-text">Product Designer</p>
@@ -127,9 +164,18 @@
                         </li>
                        </ul>
                     </div>
+                    </div>
                     </li>
+                    <div class="team-main-width">
                     <li class="item">
-                        <img width="264" src="./images/tomford.jpg" alt="Tom Ford">
+                        <img
+                        srcset="./images/our_team/tom-ford.jpg 1x, 
+                        ./images/our_team/tom-ford@2x.jpg 2x,"
+                          src="./images/our_team/tom-ford.jpg"
+                          alt="Tom Ford"
+                          width="264"
+                          height="260"
+                        />
                     <div class="padding">
                         <h3 class="team-title">Tom Ford</h3>
                         <p class="team-text">Frontend Developer</p>
@@ -164,9 +210,18 @@
                             </li>
                            </ul>
                     </div>
+                    </div>
                     </li>
+                    <div class="team-main-width">
                     <li class="item">
-                        <img width="264" src="./images/camilagarcia.jpg" alt="Camila Garcia">
+                        <img
+                        srcset="./images/our_team/camila-garcia.jpg 1x, 
+                        ./images/our_team/camila-garcia@2x.jpg 2x,"
+                          src="./images/our_team/camila-garcia.jpg"
+                          alt="Camila Garcia"
+                          width="264"
+                          height="260"
+                        />
                     <div class="padding">
                         <h3 class="team-title">Camila Garcia</h3>
                         <p class="team-text">Marketing</p>
@@ -201,9 +256,18 @@
                             </li>
                            </ul>
                     </div>
+                    </div>
                     </li>
+                    <div class="team-main-width">
                     <li class="item">
-                        <img width="264" src="./images/danielwilson.jpg" alt="Daniel Wilson">
+                        <img
+                        srcset="./images/our_team/daniel-wilson.jpg 1x, 
+                        ./images/our_team/daniel-wilson@2x.jpg 2x,"
+                          src="./images/our_team/daniel-wilson.jpg"
+                          alt="Daniel Wilson"
+                          width="264"
+                          height="260"
+                        />
                     <div class="padding">
                         <h3 class="team-title">Daniel Wilson</h3>
                         <p class="team-text">UI Designer</p>
@@ -240,6 +304,7 @@
                     </div>
                     </li>
                 </ul>
+            </div>
             </div>
         </section>
         <section class="clients section">
@@ -288,7 +353,7 @@
     </main>
     <footer class="footer">
         <div class="container footer-possittion">
-            <div>
+            <div class="footer-first">
                 <a class="logo-footer list" href="./index.html"><span class="logo-blue list">Web</span>Studio</a>
                 <p class="footer-text">Increase the flow of customers and sales for your business with digital marketing & growth solutions.</p>
             </div>
@@ -384,8 +449,61 @@
             </form>
         </div>
       </div>
+      <div class="menu-container js-menu-container" id="mobile-menu">
+        <button class="button-modal js-close-menu">
+            <svg class="icon-modal">
+                <use href="./images/icons.svg#icon-icon-close"></use>
+              </svg>
+        </button>
+        <ul class="mobile-menu list">
+          <li class="mobile-menu-item"><a class="mobile-menu-link link" href="/index.html">Studio</a></li>
+          <li class="mobile-menu-item"><a class="mobile-menu-link link" href="/portfolio.html">Portfolio</a></li>
+          <li class="mobile-menu-item"><a class="mobile-menu-link link" href="">Contacts</a></li>
+        </ul>
+        <ul class="mobile-contacts list">
+            <li class="mobile-contacts-item">
+                <a class="mobile-contacts-link accent link" href="tel:+11(000)1111111" >+11 (000) 111-11-11</a>
+            </li>
+            <li class="mobile-contacts-item">
+                <a class="mobile-contacts-link link" href="mailto:info@devstudio.com">info@devstudio.com</a>
+            </li>
+        </ul>
+        <ul class="mobile-social-link list">
+            <li>
+                <a class="mobile-social-link-bg" href="">
+                    <svg class="mobile-social-icon">
+                        <use href="./images/icons.svg#icon-instagram"></use>
+                    </svg></a>
+            </li>
+            <li>
+                <a class="mobile-social-link-bg" href="">
+                    <svg class="mobile-social-icon">
+                        <use href="./images/icons.svg#icon-twitter"></use>
+                    </svg></a>
+            </li>
+            <li>
+                <a class="mobile-social-link-bg" href="">
+                    <svg class="mobile-social-icon">
+                        <use href="./images/icons.svg#icon-facebook"></use>
+                    </svg></a>
+            </li>
+            <li>
+                <a class="mobile-social-link-bg" href="">
+                    <svg class="mobile-social-icon">
+                        <use href="./images/icons.svg#icon-linkedin"></use>
+                    </svg></a>
+            </li>
+        </ul>
+      </div>
   
-      <script src="./js/modal.js"></script>
+      <script
+        defer
+        src="https://cdnjs.cloudflare.com/ajax/libs/body-scroll-lock/3.1.5/bodyScrollLock.min.js"
+        integrity="sha512-HowizSDbQl7UPEAsPnvJHlQsnBmU2YMrv7KkTBulTLEGz9chfBoWYyZJL+MUO6p/yBuuMO/8jI7O29YRZ2uBlA=="
+        crossorigin="anonymous"
+      ></script>
+    <script defer src="js/mobile-menu.js"></script>
+    <script src="./js/modal.js"></script>
 
 </body>
 </html>
