--- a/portfolio.html
+++ b/portfolio.html
@@ -29,6 +29,9 @@
                 <li class="item"><a class="contacts-link" href="mailo:info@devstudio.com">info@devstudio.com</a></li>
                 <li class="item"><a class="contacts-link" href="tel:+11(000)1111111">+11 (000) 111-11-11</a></li>
             </ul>
+            <button class="menu-toggle js-open-menu" aria-expanded="false" aria-controls="mobile-menu">
+              <svg class="icon-menu"><use class="icon-menu-use" href="./images/icons.svg#icon-menu"></use></svg>
+          </button>
     </div>
 </header>
     <main>
@@ -160,7 +163,7 @@
     </main>
     <footer class="footer">
       <div class="container footer-possittion">
-          <div>
+          <div class="footer-first">
               <a class="logo-footer list" href="./index.html"><span class="logo-blue list">Web</span>Studio</a>
               <p class="footer-text">Increase the flow of customers and sales for your business with digital marketing & growth solutions.</p>
           </div>
@@ -196,16 +199,73 @@
                   </address>
           </div>
           <form class="subscribe" name="subscribe">
-            <label class="subscribe-label">Subscribe</label>
-            <div class="subscribe-flex">
-            <input class="subscribe-input" type="email" name="user_mail" placeholder="E-mail">
-            <button class="subscribe-button" type="submit">Subscribe 
-                <svg class="subscribe-icon">
-                <use href="./images/icons.svg#icon-iconsend"></use>
-            </svg></button>
-            </div>
+                  <label class="subscribe-label">Subscribe</label>
+              <div class="subscribe-flex">
+                  <input class="subscribe-input" type="email" name="user_mail" placeholder="E-mail">
+                  <button class="subscribe-button" type="submit">Subscribe 
+                      <svg class="subscribe-icon">
+                      <use href="./images/icons.svg#icon-iconsend"></use>
+                  </svg></button>
+              </div>
           </form>
       </div>
-    </footer>
+
+  </footer>
+
+    <div class="menu-container js-menu-container" id="mobile-menu">
+      <button class="button-modal js-close-menu">
+          <svg class="icon-modal">
+              <use href="./images/icons.svg#icon-icon-close"></use>
+            </svg>
+      </button>
+      <ul class="mobile-menu list">
+        <li class="mobile-menu-item"><a class="mobile-menu-link link" href="./index.html">Studio</a></li>
+        <li class="mobile-menu-item"><a class="mobile-menu-link link" href="./portfolio.html">Portfolio</a></li>
+        <li class="mobile-menu-item"><a class="mobile-menu-link link" href="">Contacts</a></li>
+      </ul>
+      <ul class="mobile-contacts list">
+          <li class="mobile-contacts-item">
+              <a class="mobile-contacts-link accent link" href="tel:+11(000)1111111" >+11 (000) 111-11-11</a>
+          </li>
+          <li class="mobile-contacts-item">
+              <a class="mobile-contacts-link link" href="mailto:info@devstudio.com">info@devstudio.com</a>
+          </li>
+      </ul>
+      <ul class="mobile-social-link list">
+          <li>
+              <a class="mobile-social-link-bg" href="">
+                  <svg class="mobile-social-icon">
+                      <use href="./images/icons.svg#icon-instagram"></use>
+                  </svg></a>
+          </li>
+          <li>
+              <a class="mobile-social-link-bg" href="">
+                  <svg class="mobile-social-icon">
+                      <use href="./images/icons.svg#icon-twitter"></use>
+                  </svg></a>
+          </li>
+          <li>
+              <a class="mobile-social-link-bg" href="">
+                  <svg class="mobile-social-icon">
+                      <use href="./images/icons.svg#icon-facebook"></use>
+                  </svg></a>
+          </li>
+          <li>
+              <a class="mobile-social-link-bg" href="">
+                  <svg class="mobile-social-icon">
+                      <use href="./images/icons.svg#icon-linkedin"></use>
+                  </svg></a>
+          </li>
+      </ul>
+    </div>
+
+    <script
+      defer
+      src="https://cdnjs.cloudflare.com/ajax/libs/body-scroll-lock/3.1.5/bodyScrollLock.min.js"
+      integrity="sha512-HowizSDbQl7UPEAsPnvJHlQsnBmU2YMrv7KkTBulTLEGz9chfBoWYyZJL+MUO6p/yBuuMO/8jI7O29YRZ2uBlA=="
+      crossorigin="anonymous"
+    ></script>
+  <script defer src="js/mobile-menu.js"></script>
+
 </body>
 </html>
