--- a/index.html
+++ b/index.html
@@ -456,7 +456,7 @@
               </svg>
         </button>
         <ul class="mobile-menu list">
-          <li class="mobile-menu-item"><a class="mobile-menu-link link" href="./index.html">Studio</a></li>
+          <li class="mobile-menu-item"><a class="mobile-menu-link link current" aria-current="true" href="./index.html">Studio</a></li>
           <li class="mobile-menu-item"><a class="mobile-menu-link link" href="./portfolio.html">Portfolio</a></li>
           <li class="mobile-menu-item"><a class="mobile-menu-link link" href="">Contacts</a></li>
         </ul>
