--- a/portfolio.html
+++ b/portfolio.html
@@ -220,7 +220,7 @@
       </button>
       <ul class="mobile-menu list">
         <li class="mobile-menu-item"><a class="mobile-menu-link link" href="./index.html">Studio</a></li>
-        <li class="mobile-menu-item"><a class="mobile-menu-link link" href="./portfolio.html">Portfolio</a></li>
+        <li class="mobile-menu-item"><a class="mobile-menu-link link current" aria-current="true" href="./portfolio.html">Portfolio</a></li>
         <li class="mobile-menu-item"><a class="mobile-menu-link link" href="">Contacts</a></li>
       </ul>
       <ul class="mobile-contacts list">
